# python-project-83

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  database.sql  pyproject.toml
.github/workflows/: Project-CI.yml
page_analyzer/: __init__.py  app.py  database.py  logic_checks.py  validators.py
page_analyzer/templates/: index.html  url_id.html  urls.html
tests/: test_checks.py  test_page_analyzer.py  test_page_analyzer_app.py
